manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapl-demo
  labels:
    app: sampleapl-demo
    app.openshift.io/runtime: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapl-demo
  template:
    metadata:
      labels:
        app: sampleapl-demo
    spec:
      containers:
        - name: sampleapl-demo
          image: docker.io/rhnconsultingkemori/sampleapl-demo:beb83aaabfa672c1492c8f93b685b501614006f7
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8088
              protocol: TCP
